power: pm8921-bms: split batterydata interpolation into a new file
Split off the battery data lookup table interpolation into
batterydata-lib.c. This allows different BMS to share the batterydata
interpolation code.

Change-Id: I67c2ac422b0ba1e5eca11ffccfe7e112c2e65a3d
Signed-off-by: Xiaozhe Shi <xiaozhes@codeaurora.org>

Conflicts:
	arch/arm/mach-msm/Makefile

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -307,7 +307,7 @@ obj-$(CONFIG_MACH_ESPRESSO10_ATT) += board-espresso10-battery.o
 obj-$(CONFIG_MACH_COMANCHE) += board-comanche-battery.o
 obj-$(CONFIG_MACH_EXPRESS) += board-express-battery.o
 
-obj-$(CONFIG_PM8921_BMS) += bms-batterydata.o bms-batterydata-desay.o
+obj-$(CONFIG_PM8921_BMS) += bms-batterydata.o bms-batterydata-desay.o batterydata-lib.o
 obj-$(CONFIG_MACH_APQ8064_SIM) += board-8064-all.o board-8064-regulator.o
 obj-$(CONFIG_MACH_APQ8064_RUMI3) += board-8064-all.o board-8064-regulator.o
 obj-$(CONFIG_ARCH_MSM9615) += board-9615.o devices-9615.o board-9615-regulator.o
