--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -34,7 +34,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IX-v0.14-"
+CONFIG_LOCALVERSION="-IX-v0.15-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -284,7 +284,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8X60 is not set
 CONFIG_ARCH_MSM8960=y
 # CONFIG_ARCH_MSM8930 is not set
-CONFIG_ARCH_APQ8064=y
+# CONFIG_ARCH_APQ8064 is not set
 # CONFIG_ARCH_MSMCOPPER is not set
 # CONFIG_ARCH_FSM9XXX is not set
 # CONFIG_ARCH_MSM9615 is not set
@@ -335,8 +335,6 @@ CONFIG_MACH_M2_ATT=y
 # CONFIG_MACH_SUPERIORLTE_SKT is not set
 # CONFIG_MACH_MSM8960_LIQUID is not set
 # CONFIG_DMUX_LA1_5 is not set
-CONFIG_MACH_APQ8064_SIM=y
-# CONFIG_MACH_APQ8064_RUMI3 is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x80200000
 CONFIG_KERNEL_PMEM_EBI_REGION=y
@@ -389,7 +387,7 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_MSM_MPDEC is not set
+CONFIG_MSM_MPDEC=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1890000
 CONFIG_MSM_CPU_FREQ_MIN=384000
