--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -34,7 +34,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IX-v0.16-"
+CONFIG_LOCALVERSION="-IX-v0.17-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -638,6 +638,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE_FREQ=1026000
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
