--- a/arch/arm/configs/ixa_d2_defconfig
+++ b/arch/arm/configs/ixa_d2_defconfig
@@ -34,7 +34,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IXa-v0.14-"
+CONFIG_LOCALVERSION="-IXa-v0.17-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -390,7 +390,7 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_MSM_MPDEC is not set
+CONFIG_MSM_MPDEC=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1890000
 CONFIG_MSM_CPU_FREQ_MIN=384000
@@ -639,14 +639,16 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE_FREQ=1026000
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=1026000
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=1242000
 CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
-CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1350000
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1512000
 CONFIG_SEC_DVFS=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
