--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1548,6 +1548,12 @@ config INTELLI_PLUG
 	help
 	  Generic Intelli-plug cpu hotplug driver for ARM SOCs
 
+config AUTO_HOTPLUG
+	bool "Enable auto-hotplug cpu hotplug driver"
+	default n
+	help
+	  Generic auto-hotplug cpu hotplug driver for ARM SOCs
+
 config MSM_CPU_AVS
 	bool "Enable software controlled Adaptive Voltage Scaling (AVS)"
 	depends on (ARCH_MSM_SCORPION && QSD_SVS)
