--- a/ramdisk/initramfs/init.target.rc
+++ b/ramdisk/initramfs/init.target.rc
@@ -77,24 +77,24 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
         group camera system inet input graphics
 
 #start GNSS/Sensor interface daemon
-service gsiff_daemon /system/bin/gsiff_daemon
-    class late_start
-    user system
-    group gps qcom_oncrpc net_raw
+#service gsiff_daemon /system/bin/gsiff_daemon
+#    class late_start
+#    user system
+#    group gps qcom_oncrpc net_raw
 
-service thermald /system/bin/thermald
-   class main
-   user root
-   group root
+#service thermald /system/bin/thermald
+#   class main
+#   user root
+#   group root
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
-   user root
-   disabled
+#service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+#   user root
+#   disabled
 
-service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
-   user system
-   group system
-   disabled
+#service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
+#   user system
+#   group system
+#   disabled
 
 service kickstart /system/bin/qcks -i /firmware/image/
     oneshot
