--- a/ramdisk/initramfs/init.qcom.rc
+++ b/ramdisk/initramfs/init.qcom.rc
@@ -158,6 +158,9 @@ on boot
     # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
+write /sys/block/mmcblk0/queue/add_random 0
+write /sys/block/mmcblk1/queue/add_random 0
+
 # import cne init file
 on post-fs
     start rmt_storage
