--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -34,7 +34,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IX-v0.21-"
+CONFIG_LOCALVERSION="-IX-v0.22-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -395,8 +395,8 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1890000
 CONFIG_MSM_CPU_FREQ_MIN=384000
-# CONFIG_INTELLI_PLUG is not set
-CONFIG_AUTO_HOTPLUG=y
+CONFIG_INTELLI_PLUG=y
+# CONFIG_AUTO_HOTPLUG is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -471,7 +471,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_CPU_MAX_CLK_1DOT2GHZ is not set
 # CONFIG_MSM_DCVS_FOR_MSM8260A is not set
-# CONFIG_GPU_OVERCLOCK is not set
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_ULTIMATE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
@@ -653,7 +653,7 @@ CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
 CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1512000
 CONFIG_SEC_DVFS=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
+CONFIG_INTELLI_MAX_ACTIVE_FREQ=1350000
 CONFIG_INTELLI_MAX_INACTIVE_FREQ=1134000
 CONFIG_CPUFREQ_LIMIT_MAX_FREQ=y
 CONFIG_CPU_IDLE=y
