--- a/ramdisk/initramfs/init.rc
+++ b/ramdisk/initramfs/init.rc
@@ -10,6 +10,10 @@ import /init.trace.rc
 import /init.carrier.rc
 
 on early-init
+
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1512000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1512000
+
     # Set init and its forked children's oom_adj.
     write /proc/1/oom_adj -16
 
@@ -704,6 +708,10 @@ service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/et
     disabled
     oneshot
 
+on property:sys.boot_completed=1
+    setprop service.bootanim.exit 1
+    stop bootanim
+
 service media /system/bin/mediaserver
     class main
     user media
@@ -717,11 +725,10 @@ service powersnd /system/bin/samsungpowersoundplay
     disabled
     oneshot
 
-service samsungani /system/bin/samsungani
+service bootanim /system/bin/bootanimation
     class main
     user graphics
     group graphics
-    disabled
     oneshot
 
 service dbus /system/bin/dbus-daemon --system --nofork
