--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -34,7 +34,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IX-v0.25-"
+CONFIG_LOCALVERSION="-IX-v0.26-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -95,7 +95,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
-CONFIG_SCHED_AUTOGROUP=y
+# CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -397,6 +397,7 @@ CONFIG_MSM_CPU_FREQ_MAX=1890000
 CONFIG_MSM_CPU_FREQ_MIN=384000
 # CONFIG_INTELLI_PLUG is not set
 CONFIG_AUTO_HOTPLUG=y
+# CONFIG_AUTO_HOTPLUG_BOOST is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -476,8 +477,8 @@ CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_ULTIMATE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_SEC_PERIPHERAL_SECURE_CHK is not set
-CONFIG_SEC_L1_DCACHE_PANIC_CHK=y
-CONFIG_SEC_SSR_DEBUG_LEVEL_CHK=y
+# CONFIG_SEC_L1_DCACHE_PANIC_CHK is not set
+# CONFIG_SEC_SSR_DEBUG_LEVEL_CHK is not set
 CONFIG_MSM_DCVS=y
 
 #
