--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -34,7 +34,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IX-v0.27-"
+CONFIG_LOCALVERSION="-IX-v0.28-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -473,7 +473,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_CPU_MAX_CLK_1DOT2GHZ is not set
 # CONFIG_MSM_DCVS_FOR_MSM8260A is not set
-CONFIG_GPU_OVERCLOCK=y
+# CONFIG_GPU_OVERCLOCK is not set
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_ULTIMATE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
