--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.58 Kernel Configuration
+# Linux/arm 3.0.59 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -33,7 +33,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-IX-v0.29-"
+CONFIG_LOCALVERSION="-IX-v0.30-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -179,12 +179,14 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_CFQ is not set
 CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
-# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -2997,7 +2999,7 @@ CONFIG_VIBETONZ=y
 # CONFIG_VIDEO_MHL_TAB_V2 is not set
 # CONFIG_MHL_SWING_LEVEL is not set
 # CONFIG_ACCESSORY is not set
-CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR=m
+# CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR is not set
 
 #
 # File systems
