--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -776,3 +776,10 @@ source "drivers/misc/carma/Kconfig"
 source "drivers/misc/inv_mpu/Kconfig"
 source "drivers/misc/yas532/Kconfig"
 endif # MISC_DEVICES
+
+config FSYNC_CONTROL
+	bool "Support for FSync Control"
+	default y
+	help
+	  Say Y here to enable FSync Control
+ 
