--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.58 Kernel Configuration
+# Linux/arm 3.0.60 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -33,7 +33,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-v1.0-"
+CONFIG_LOCALVERSION="-iX-v1.1-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -72,9 +72,7 @@ CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_PRIO=1
-CONFIG_RCU_BOOST_DELAY=500
+# CONFIG_RCU_BOOST is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=17
@@ -1252,6 +1250,7 @@ CONFIG_MPU_SENSORS_AK8975_411=y
 # CONFIG_MPU_SENSORS_HSCDTD004A_411 is not set
 # CONFIG_MPU_USERSPACE_DEBUG is not set
 # CONFIG_INPUT_YAS_SENSORS is not set
+CONFIG_FSYNC_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
