--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1661,6 +1661,12 @@ config AUTO_HOTPLUG
 	default n
 	help
 	  Generic auto-hotplug cpu hotplug driver for ARM SOCs
+
+config USERSPACE_VOLTAGE_CONTROL
+	bool "Enable Userspace CPU Voltage Control"
+	default y
+	help
+	  Userspace Voltage Control
  
 config MSM_AVS_HW
 	bool "Enable Adaptive Voltage Scaling (AVS)"
