--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -37,7 +37,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-CM10.1-v1.2-"
+CONFIG_LOCALVERSION="-iX-CM10.1-v1.3-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -420,7 +420,13 @@ CONFIG_MSM_DMA_TEST=m
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
-# CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
+CONFIG_MSM_MEMORY_LOW_POWER_MODE=y
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE_IDLE_ACTIVE is not set
+CONFIG_MSM_MEMORY_LOW_POWER_MODE_IDLE_RETENTION=y
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE_IDLE_DEEP_POWER_DOWN is not set
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_ACTIVE is not set
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_RETENTION is not set
+CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_DEEP_POWER_DOWN=y
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -1858,7 +1864,7 @@ CONFIG_BATTERY_MAX17040=y
 CONFIG_PM8921_CHARGER=y
 CONFIG_PM8XXX_CCADC=y
 # CONFIG_LTC4088_CHARGER is not set
-# CONFIG_PM8921_BMS is not set
+CONFIG_PM8921_BMS=y
 CONFIG_PM8921_SEC_CHARGER=y
 CONFIG_CHARGER_SMB347=y
 CONFIG_BATTERY_CTIA=y
