--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.62 Kernel Configuration
+# Linux/arm 3.0.63 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -37,7 +37,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-CM10.1-v1.3-"
+CONFIG_LOCALVERSION="-iX-CM10.1-v1.4-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -467,7 +467,7 @@ CONFIG_MSM_QDSS=y
 CONFIG_MSM_QDSS_ETM_DEFAULT_ENABLE=y
 CONFIG_CLOCK_MAP=y
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
-CONFIG_MSM_RUN_QUEUE_STATS=y
+# CONFIG_MSM_RUN_QUEUE_STATS is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
