--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -37,7 +37,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-CM10.1-v1.4-"
+CONFIG_LOCALVERSION="-iX-CM10.1-v1.5-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -396,6 +396,7 @@ CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_RESET_MODEM=m
 CONFIG_MSM_SMD_LOGGING=y
+CONFIG_MSM_IPC_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
@@ -1864,7 +1865,7 @@ CONFIG_BATTERY_MAX17040=y
 CONFIG_PM8921_CHARGER=y
 CONFIG_PM8XXX_CCADC=y
 # CONFIG_LTC4088_CHARGER is not set
-CONFIG_PM8921_BMS=y
+# CONFIG_PM8921_BMS is not set
 CONFIG_PM8921_SEC_CHARGER=y
 CONFIG_CHARGER_SMB347=y
 CONFIG_BATTERY_CTIA=y
@@ -3250,7 +3251,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
-CONFIG_FRAME_WARN=1024
+CONFIG_FRAME_WARN=2048
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
