--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1651,6 +1651,12 @@ config MSM_CPU_FREQ_MIN
 
 endif # CPU_FREQ_MSM
 
+config AUTO_HOTPLUG
+	bool "Enable auto-hotplug cpu hotplug driver"
+	default n
+	help
+	  Generic auto-hotplug cpu hotplug driver for ARM SOCs
+ 
 config MSM_AVS_HW
 	bool "Enable Adaptive Voltage Scaling (AVS)"
 	default n
