--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -1,10 +1,9 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.36 Kernel Configuration
+# Linux/arm 3.4.37 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
-CONFIG_MIGHT_HAVE_PCI=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_GENERIC_GPIO=y
 # CONFIG_ARCH_USES_GETTIMEOFFSET is not set
@@ -164,6 +163,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -330,7 +330,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8X60 is not set
 CONFIG_ARCH_MSM8960=y
 # CONFIG_ARCH_MSM8930 is not set
-CONFIG_ARCH_APQ8064=y
+# CONFIG_ARCH_APQ8064 is not set
 # CONFIG_ARCH_MSM8974 is not set
 # CONFIG_ARCH_MPQ8092 is not set
 # CONFIG_ARCH_MSM8226 is not set
@@ -358,12 +358,6 @@ CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
 # CONFIG_MACH_MSM8960_MTP is not set
 # CONFIG_MACH_MSM8960_FLUID is not set
 # CONFIG_MACH_MSM8960_LIQUID is not set
-# CONFIG_MACH_APQ8064_CDP is not set
-# CONFIG_MACH_APQ8064_MTP is not set
-# CONFIG_MACH_APQ8064_LIQUID is not set
-# CONFIG_MACH_MPQ8064_CDP is not set
-# CONFIG_MACH_MPQ8064_HRD is not set
-# CONFIG_MACH_MPQ8064_DTV is not set
 # CONFIG_MACH_MSM_DUMMY is not set
 CONFIG_MACH_M2=y
 CONFIG_MACH_M2_ATT=y
@@ -374,7 +368,6 @@ CONFIG_MACH_M2_ATT=y
 # LGE Board Selection
 #
 CONFIG_BOARD_HEADER_FILE=""
-# CONFIG_MACH_APQ8064_MAKO is not set
 # CONFIG_MACH_LGE_DUMMY is not set
 
 #
@@ -391,7 +384,6 @@ CONFIG_MSM_AMSS_VERSION=6225
 CONFIG_MSM_AMSS_VERSION_6225=y
 CONFIG_MSM_HAS_DEBUG_UART_HS=y
 CONFIG_DEBUG_MSM8960_UART=y
-# CONFIG_DEBUG_APQ8064_UART is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
@@ -444,7 +436,8 @@ CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1620000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_AUTO_HOTPLUG=y
-# CONFIG_MSM_AVS_HW is not set
+CONFIG_USERSPACE_VOLTAGE_CONTROL=y
+CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
@@ -478,7 +471,6 @@ CONFIG_MSM_PIL_VIDC=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
-# CONFIG_MSM_GSS_SSR_8064 is not set
 CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
@@ -593,9 +585,8 @@ CONFIG_ARM_GIC=y
 #
 # Bus support
 #
-# CONFIG_PCI is not set
 # CONFIG_PCI_SYSCALL is not set
-CONFIG_ARCH_SUPPORTS_MSI=y
+# CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
 
 #
@@ -744,12 +735,17 @@ CONFIG_HAVE_AOUT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_HAS_WAKELOCK=y
+CONFIG_HAS_EARLYSUSPEND=y
+CONFIG_WAKELOCK=y
+CONFIG_WAKELOCK_STAT=y
+CONFIG_USER_WAKELOCK=y
+CONFIG_EARLYSUSPEND=y
+# CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
+# CONFIG_CONSOLE_EARLYSUSPEND is not set
+CONFIG_FB_EARLYSUSPEND=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
-CONFIG_PM_AUTOSLEEP=y
-CONFIG_PM_WAKELOCKS=y
-CONFIG_PM_WAKELOCKS_LIMIT=0
-# CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
@@ -2363,6 +2359,7 @@ CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_MSM_CAMERA_FLASH_TPS61310 is not set
 # CONFIG_OV2720 is not set
 # CONFIG_OV8825 is not set
+# CONFIG_IMX135 is not set
 # CONFIG_MSM_EEPROM is not set
 # CONFIG_IMX074_EEPROM is not set
 # CONFIG_IMX091_EEPROM is not set
@@ -2782,7 +2779,6 @@ CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_MSM=y
 # CONFIG_USB_EHCI_MSM_HSIC is not set
-# CONFIG_USB_EHCI_MSM_HOST4 is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1760_HCD is not set
@@ -2971,6 +2967,7 @@ CONFIG_USB_ANDROID_RMNET_CTRL_SMD=y
 # OTG and related infrastructure
 #
 CONFIG_USB_OTG_UTILS=y
+# CONFIG_USB_OTG_WAKELOCK is not set
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ULPI is not set
 # CONFIG_USB_MSM_OTG_72K is not set
@@ -3056,6 +3053,7 @@ CONFIG_LEDS_TRIGGERS=y
 # CONFIG_LEDS_TRIGGER_BACKLIGHT is not set
 # CONFIG_LEDS_TRIGGER_GPIO is not set
 # CONFIG_LEDS_TRIGGER_DEFAULT_ON is not set
+# CONFIG_LEDS_TRIGGER_SLEEP is not set
 
 #
 # iptables trigger is under Netfilter config (LED target)
