Squashed commit of the following:
commit 5c3fd506ff944a83a4088aa436122e5495ac76a0
Author: Steve Kondik <shade@chemlab.org>
Date:   Wed Apr 3 01:15:08 2013 -0700

    d2: Fix and consolidate persistent_ram code

     * Move persistent_ram back to the end of lowmem. For some reason it is
       getting clobbered randomly at it's current location.
     * Also consolidate the code into devices-8960 where it can be shared.

    Change-Id: Ie81670df15591b4c7505b0b356d04fca63bcac9e

commit 341f9ed44cfffd099a8e3ff38bf8ae3af886bf28
Merge: fbd86b9 d0302d5
Author: Steve Kondik <shade@chemlab.org>
Date:   Wed Apr 3 00:48:25 2013 -0700

    Merge branch 'jb_2.5' of git://codeaurora.org/kernel/msm into cm-10.1

    Change-Id: I88f2c14f25c6ea7227763c1737d4dba294a092d4

commit fbd86b9a5fbe1e630ff55c534b20ba8029ca7bf3
Author: Colin Cross <ccross@android.com>
Date:   Thu Dec 13 16:40:13 2012 -0800

    hardlockup: detect hard lockups without NMIs using secondary cpus

    Emulate NMIs on systems where they are not available by using timer
    interrupts on other cpus.  Each cpu will use its softlockup hrtimer
    to update a per-cpu timestamp and then check the timestamp on the
    next cpu.

    The emulation uses the softlockup threshold instead of the hardlockup
    threshold because the implementation runs at the same resolution as
    the softlockup detector.

    This patch is useful on systems where the hardlockup detector is not
    available due to a lack of NMIs, for example most ARM SoCs.
    Without this patch any cpu stuck with interrupts disabled can
    cause a hardware watchdog reset with no debugging information,
    but with this patch the kernel can detect the lockup and panic,
    which can result in useful debugging info.

    Change-Id: I3e6de6da27183b2a0a73a390e394f95a945856d9
    Signed-off-by: Colin Cross <ccross@android.com>

commit 035ce3df73e89fb39d9e772fe75fcef6097444bc
Author: Dan Pasanen <dan.pasanen@gmail.com>
Date:   Sun Mar 31 15:24:11 2013 -0500

  

--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -229,6 +229,10 @@ config FB_MSM_MIPI_DSI_NT35590
 	bool
 	select FB_MSM_MIPI_DSI
 
+config FB_MSM_MIPI_DSI_NT35590
+	bool
+	select FB_MSM_MIPI_DSI
+
 config FB_MSM_MIPI_DSI_TC358764_DSI2LVDS
 	bool
 	select FB_MSM_MIPI_DSI
