--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.38 Kernel Configuration
+# Linux/arm 3.4.39 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-v2.1-"
+CONFIG_LOCALVERSION="-iX-v2.2-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1966,7 +1966,7 @@ CONFIG_PM8XXX_CCADC=y
 # CONFIG_LTC4088_CHARGER is not set
 # CONFIG_PM8921_BMS is not set
 CONFIG_PM8921_SEC_CHARGER=y
-CONFIG_BATTERY_CTIA=y
+# CONFIG_BATTERY_CTIA is not set
 CONFIG_BATTERY_SEC=y
 CONFIG_SAMSUNG_LPM_MODE=y
 CONFIG_WIRELESS_CHARGING=y
