sec_debug: Forward-port SEC_DEBUG feature from Samsung
 * Forward port, fix warnings, fix ifdefs.
 * Very useful for debugging hard problems, no impact when disabled.
 * Also required to get correct ramdumps.

Change-Id: I375e0dcce83b717e5f1228925d7269c5197b2016

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -401,3 +401,6 @@ ifdef CONFIG_MSM_CPR
 obj-$(CONFIG_DEBUG_FS) += msm_cpr-debug.o
 endif
 obj-$(CONFIG_MSM_CPU_PWRCTL) +=  msm_cpu_pwrctl.o
+
+obj-$(CONFIG_SEC_DEBUG) += sec_debug.o sec_getlog.o sec_gaf.o
+
